--- a/pom.xml
+++ b/pom.xml
@@ -5,4 +5,13 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>Automation-Project</name>
   <description>Test Automation Framework</description>
+  <dependencies>
+  <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>4.25.0</version>
+</dependency>
+
+  </dependencies>
 </project>
